[gd_scene load_steps=13 format=4 uid="uid://dtkbtsao13egn"]

[ext_resource type="Script" uid="uid://d1lk3rltrqjlo" path="res://characters/slime.gd" id="1_k84ui"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k84ui"]
size = Vector2(46, 31)

[sub_resource type="Animation" id="Animation_0vdh6"]
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Slime/Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.13, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Slime/Area2D/CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(121, 47)]
}

[sub_resource type="Animation" id="Animation_dar60"]
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Slime/Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.84, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Slime/Area2D/CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(141.5, 159)]
}

[sub_resource type="Animation" id="Animation_e14ik"]
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_8aihb"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [25, 26, 27, 25, 25, 26, 27, 25]
}

[sub_resource type="Animation" id="Animation_k84ui"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 2, 1, 3]
}

[sub_resource type="Animation" id="Animation_j2cku"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime/Area2D/CollisionShape2D:shape:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(141.5, 159)]
}

[sub_resource type="Animation" id="Animation_tcriy"]
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j2cku"]
_data = {
&"Attack01": SubResource("Animation_0vdh6"),
&"Attack02": SubResource("Animation_dar60"),
&"Death": SubResource("Animation_e14ik"),
&"Hurt": SubResource("Animation_8aihb"),
&"Idle": SubResource("Animation_k84ui"),
&"RESET": SubResource("Animation_j2cku"),
&"Walk": SubResource("Animation_tcriy")
}

[sub_resource type="PortableCompressedTexture2D" id="PortableCompressedTexture2D_k84ui"]
_data = PackedByteArray("AAADAAUAAAABAAAACAcAAAgHAADWFwAAUklGRs4XAABXRUJQVlA4TMIXAAAvB8fBEVfCqLZtJRd3J4Bb+B+BIizmNvq4Qw3XtW2bzn62bf2ngqTglJG/FGHbNoPItpVc3J0SJKeBSwlqfMFdBARF/o8WAPz/H4DNnQtAzhLkKyhXwUAI+JNg/Yj05o35aN6fRmd+HLczGJnQkZZgJN4Uy/t1fj7374eP5v69nr/s/b9kUmfQn+9vu5nPKg+u5+0mn5/NB0B+6XGJmPpyyJxG3Ein8m2urZqz7Ly/APS4bHc4FCT0tP6Q1onMFO3pzudSABLCi/qMGZqFoyWfcAJwPe0BaDsdPvKxXlfrdV1seeh21h6JUsmQSkfaHQBVjWoWg7aNJDnlz3r3HggRMQGV9Mxhkr6TdqxtfbWYJEWlZ1pvLU0z/UiCpO+Wdz585esC3rqNbdvKaJUxMu4jZcolV1njUsQLWWW1unjcf4Ba+f//IjsfQZBKC9Ad946I/ktiJElsm+7fQhKINMkTQpH+Q24jyZF0PqwWv/bfyhWnr+qmc5YR/XcDSW7bLDo4G4TkCPUUXduO21Z9/QUJIRwbcXBvBvIN7iCk8+jELJD//yHHl4eX18QTkQGM6L8ktm0ESZJ+wdaisO5JGtfTdf+31WDwn/sP//Ef/7n/8B//8R//8R//8R//8R//uf/wH/+5//Af//Ef//Ef//Gf+w//8Z/7D//xH//xH//xH//xH//xn/sP//Ef/7n/8B//8R//8R//rc0R0ZcvX6LAEAIRedD6LnMEF1Zm4EHRvU8JIUSZzJpiCnCylFYHJHTrPVmW5SiQv9xmhEbjOGIjOcMwEJE/yE33RA4/MMKLcs7VTNXXuITcgE86DOyAsE7O2SnkZggCh2GIMpkf1RthNcGlpImUEq44MUYrAEoC5ZwZrHHsdzj8bdXIH+TqcrkNFC4ruJQwF9quJxDRZrPBh3s3wZwqrXHsdzj8bdXIFN9V+nxj8aBG/QfBAiRQNAFxoDtENE1TjJFp1PpFZZom/AJshGO/2+Fvq0am+K7S5xuLB3XpuzbF/4Rff4Zh0H2SQSFFnVIcWOB7HdLt8DdUI1N8V2n9xvL8xbAHLRL7FCL68uULLihPIQRWA/HHvu6NeFJKQviBtoFSd7ud5Njvc/jbqpHW34GFjfqU2mw25kXgZrMx0ZpCRPv9Hp/HUiwoLVaXFZs0qu7MVbQ96oX8sd/58L8yNKKawzD0adS0V3tQpeNen8OaommjlJKFG+n7aBHwPXmmUedMtmqkZKCa1UadS4FXCIGpk8CnTKWtXSTjq1MjTQNFoT6jbpls1UjNQPx1xpyzpFG3UuCFmTLrAnIbIJPZsCpXp0bKBirNqE8mWzVSM1CfRh1KmVcIIZaK/mu6Rdyw6iPQr06NtA7UM1NKic9kq0Y6BurWqFsp7SLwAMaaqdEI7vd7ImJ4lWnEqYeAdLY24jNpujOv2+hwOBCRmoE6NOpZCoRKjBk8rOFdzVe6RmoHWlVNA/GNVi/lQZUWq3+veZ55bmoazTWRnqUs0Kh/KRWqul5tRcAqt0KN+pSyQ6NupUxoNRj8x3/uP+4/7j/85/7j/uP+4/7Df/zn/tP9h//cf/jP/cf9h//cf9x/+M/9p/sP/7n/uP+4/7j/8J/7j/sP//Ef//Ef//Ef//Ef//Ef//Ef//Ef//Ef//Ef//Ef//Ef//Ef//Ef//Ef//Ef//Ef//Ef//Ef//Ef//Ef//Ef//Ef//Ef//Ef//Ef//Ef//Ef//Ef//Ff9x/3H/7jP/cf/uO/7j/8x3/df7r/uP/wH//9AjnMPAwDqR2GgZn7g7ykq8QYJ4UxRlDoD/JirqIHF7qDPFeCheM4ksJxHFm4eNBU2rPAqUSk7Q+p/UEeMWZK07JijWePZJtnjPHx5AQScNEW4b0PIciLubnIrg2pMZVSwdL+ILM5U1qXFYOsKU3Likl/Zt+E3u+Ptqq8efOGhNM0HcZuTv3S/iCzOVNalxVTrCkdlhXdwZ2zqp7ZhN4vmReqLuDUEIIZTXGzl6yFRrXZK797CxGt8qQIO6wprcuKHShqm8eiCb3fE+DpbSutBZe68oLHm8kuXa1WPVz6/yL6GgIzO+eynbO0Z36x/3Xvk9ArzF7AOBTnnHyxpU3WOufwWuVdzTbnd+h2u/1mZX+QueiTpjhbUulut5M3SqAFlhVOlWcFa9qmvmfWvkk8Ho+d6X1mTgqFBigRNcVSZsZrNQ0Bj13l2m+2fk3tq0I1h2HAHMwKUu2i/tkS62w2mwhyjWTKlxWDNCqi6jK1qPfB4ChFv3TeK6vVCrcC5V0x5jv0KID1PUH+L88QrrksSzVKhz38+fCiZjqCTKPOgdRvZBZQyYNEnpfp63u/XicnJwdKLAhIOL8PIrPPIg1iQq9mlCu3h55CKuyxgmfIZVnwYgd/mUPSRbg/P7drIi9nJv6BD3yjboGM0Kg0oGI9eaHyqfXckCVNRDVkNKtJQYvuWPBhNZo5C6YSCX/s/bX3996fez/uLXo/sbsK7sNZ4AJyGyCT2bAVebEztTbqE8gOjQwC6kaNurGkj5jRLANu7XBM2TuTrYngqe44jixUfvC7fszUv1fL/0tfSCqNMYYQdCSE0KFRn0B2aGQQUDdq1KUlXfQGB76qZ7icExQ0dyw+NdlYqvKM9F4tBB5Ko8wkNpYeDgcikqNRpqZG3QIZoZFNQK2oUZeWtC+UhMvlkplnln8V4qQMwlI+i+wKMlvOpYf1vNNVbLRiIJUbHSugwmvU4SXdehl1AJnrpf1jzfOsfqPOgdRvZBlQu3q//DIZB9RQGXUMmf2wmgOVGqFRt0AmanRvAvZ+n5AXg3b/4T/+6/7j/sN//Nf9x/2n+w//df9x/+E//uM//uM//uM//uM//uM//uM//uM//uM//uM//uM//uM//uM//uM//uM//uM//uM//uM//uM//uM//uM//uM//uM//uM//uM//uM//uM//uM//uM//nP/cf9x/3H/4T/+6/7T/Yf/+I//3H/cf9x/3H/cf9x/nuVCRLE0hEBE7j9hKOe8LAszcP8JQ8zA/ScYDcNARO4/eQhf4/4Tg8ZxjDEix+PxCdAZ5Od6r6kAuv/kIHBZFmaw3W6plP+iT/U1T0+zKXUJSfL9SwghgiEEmywoHKw5Z6+QGM98+fKFuRmBGZjlKd/Me3EyjqP7z9QWY8R7EJiBZcilKSXmPfyXfqqTZVm8Qm6ebkCoaZnbEIZhwNsQeIZhICKbjBNYDeRB0ZQ5gvyyYpMBEfETK72mGsglZMYdlk7/uM0mdx/IlxWbrCn4dUWCZRr5hsy1TIxxUhhjBAVr/HG6KtUf2Lv//LSAU0lh0hZS2yojTSd6cMEOv6ivZhK+xhRfV47HYxMGaVRlHA9jDDXLTpOQii74VLC0rTLSdGJQsAPCOjlnxBoX2vhAkjomakRC7ToQ2zRNIYTs98n1k6WtMtLrkJejpAjvPdaJMVoBUBIo58xgigttkkbIhw8fiMhcjZhMhjKOYzJNoLFEIgKPmdoqI3OhUabNZoM7bROSR9no/i03l1ZJKTFnP3M18qC+XFYYU/XfJJd7yE6W7Xb7HfpNZztkNE2TanihqiLEge4Q0TRNMcbWRjlnZi81QqOcM2aq7snWa4RiLHTO4Wmi7Ak4xy30e85vhc5yRlWY60267L0yDnuGYdD9JJlBIUWdUvzCZoRGdVjt1sjCmDk7TWRkKLVCwVrjyte9c5qRfLdnLgoo9RPxw99Zoebvz/zjW+Dn9MK9N6VUHdikUQIN2IiEav9Zb/a/6lO2zW2J9oWvwvnKiJ+0nkiZh0gosg8vl0v5FXF9KDV89jVtdDweV290rdif/WKIqHp9LUAtxwqOr2gcJzM354xnVFyGA8dxJFCX5/l4780IIayCso1WR/H92VaNICyEEFmDWm8inibjOMpp0lYZqVMHHOYTYwShlNLzg16/GvkXNmLq4LOpvfcG8yWEAPacXdtWGWlUJ0BlWGgDOsHGOvAq1ojAQgixJhgrmqR8Kt6Y5o2DtspIuzr6Zx9F9ypND/N5dWuEXweBXLh2Y4zVa5HXgUYEFl1q9klzuVw+soAnXY3wawYPa3gH3rY3wqDCy9Q51jzPt+2NYKj8YrXVAW/bG5nQajD4j//4j//cf/iP//jP/cf9h//4j//4j//cf/iP//iP//iP//iP//iP/9x/+I//+I//+I//3H/4j//4z/3H/Yf/+I//+I//3H/4j//4z/3H/Yf/+K/7D//xn/sP//Ef//Ef//Ef/3X/4T/+c//hP/7jP/7jP/5z/+n+w3/85/7Df/zHf/z3OhkRRdZpmohIdwh6dXXFzN1/5r5cGmMMIRCR7tzf398KQaH7TwJYliXGaAE0he4/IWAYBiKyANlC95/5bhxHU7zm+vq6YQtjjI+MCfKgWD4PMyeF1GyhAflIKRkorM5jk0Hr8cFSklAKJSJYfZqN7oPSFzfajU+Vkv8WSiAP/xojDO7u7qqaF81yV4M+MXUe5Hg8IqYZKDQuNMu7MAAUSuepAFaXGP0HQjkvzs7O1us1pcrZ0YYFy3hm/jPLsjCD7XY7jiO/xBhhsNvtZBZ/9m42G0lLvrgBQOl0HnyaDW4Js8RYYHBACCrn5+fHmhotc0wQCSVPgoMVJ9M0EZER1gtZ2Qi99w+M4yhHRksW3v2jEP8tgfDuDOa9OBnHUf1zIAsvLy+JCFdkQPX8os6MCeK/5VAuxetuFphcXFzgg2u897KCqaHQljFBJJQ2mWma+AkuMUbgMAuEJHwghICpJJ3OjAnioLiBkxgjf92NeU6L8qSu1+vFYkFCXKiEzowJ4r8lEL+y2GFxYZ2Aeu5SmjMmiP8e98hOlkmIH7o1y4E/F47H4+p12jImyDPk9sYi2uQxLtNo9df0ZEyQ0fhr7+uj+itW95+efN02TVMW5xwztwa73a7aKMZoNQQajtQHWngQX/pWG/mD/AR9ER4rIQQ5Wdokoyrb7ZZAo+zYVl5YlkXyQRZ76+e9NzrtB7FlrgJLGvmwNGQ2S0JOyenpqZwsDZJRZQC+f/8eG1njveM4UqHDMOx2OwlmaWRwbX/48EGPfUGLRhWiWiMCY+Y3b94cBkpqFu+9TGcYBjxWWiOjZVkkjYwwGYZBZhGFk0JcaplPrmKTRvjaLqPEo7y+oUKjqvj/We0a4RcRr1YrIkpGrRDgU0MIMp3VaoXHShNlZIRJTJ3U4lZlkNkGvFBilkYxxtJW+SH1plCepqX5ghaN6uG/ZxVs5EH17lCC0HufByr3JscKrrRPRqaYeO+z4NT4AROOiGzSCLfK7BfsP0BvrOTBgRBFGlXCJauOjTyo2L8eKPE5cVfMjpL2yUjxryv4g6+5Y9HcuggxSyP8BXsMHrtVgbchqNCoKhRsBF5EtN/v8daDZKAotORRISMhPgJdk5TlrQtimUbyrZY8Cs2WMsjfeuHlb1QPGFS7Rq70Fx4AK6XUjRBCEY8NGaUGqC+xCQKN08igT9bGC9+oNrRrBF74WAP8ES/zv9AgIwNijLMJET3PRlrvzyEE4w8+83R0+zSKMVpga+uy8vI3qgoFG2kX1smsUYg2oBNsbGZ5no3ssD9jllKc7HY7/EyzNMKbVIJ/UW288I3qAWtq1wi8QgixVHRNDaoMi4iGYZjN8vNspPb+bCVz1CvfyFYiGscxi5wOYG1VZRUaVYKajaiLwAMYa/pCSbhcLjXt8bEno5ohhAsGaaS8V4kxJuSsuaxDI4WrvEjxRiBUTczgYQ1fmfiUktFta2klQUGTBK3SObderylV9smisvGJ3/zf8tOo0VFQvBEJlbSpZDXjv//+s+GJKyMSApJv1wv/CB+QP1MnSjXq/yKtG6nTyxCrrEMKzXjKyoiF4BESODFps9kcOqSwttc0uAUFVKfRxcWFJVhT90YmlEMBkE1yI9ztdkR0eXnJzJUc6y1cUDRqZF+xQCP+u3LinCMi1CSF9/f38ocqQbKgaNTo+vraDKypfiP+u4pyfn7+gPwu/U54d3f3wI2wzopGjfBY6TOxQyP+u3ICmiQJJfWslSwoGjXSjJXWiTUa8d9Vk9T1en12dkZEt3vrGrusSjWyGSvMY9Jt0oj/rpQovLq6IqLa0K7RrVAzVqrvNU4jEAqkAIUjViTo1ahorPyb1QiNviBBQomU+PDhg0HB+NUDDZeVVGZZMVGjdxMkFEoJgzNtXusULiUKLivNldET7yZIKJf+uHEUjNbIDgMSiqartHzEhmi9rFSVkeI3bnjQDKX+qdJglLRbRtYYkFA6JbJ98hEpIyFKqgQRPUZlBEMJlYA+UmVkQqvB4D/3H/5z/3H/4b/uP/zHf+4/3X/4j//4j//4j//4j//4j//4j//4j//4j//4j//4j//4j//4j//4j//4j//4j//4j//4j//4j//4j//4j//4j//4j//4j//4j//4j//4j//4j//4j//4j//4j//cf9x/3H/4z/3H/cf9x/2H//jP/cf9h//cf/jP/cf9h//cf35hFSIKIcRGQwhEZAHu7+8fHh7eNPrw8HB/f28BTqfT4+Pjj0YfHx9Pp5M/yG3RZCk91sSNYQZGmHwt/VYTN4YZGGHyvfSfNXFjmIE7yGsaBA7DEMUOw0CgsggnZhkIJ2YZCCetA4udIf1Brjy3JAhXGVxfVF5imBA4EZJSyjljGt3BCS6y38R+PPv2LA50Bye4yP5T7Oezn87i4ILRzpD+IFebWxJwlelz9U1fEiiagDiwAx9B0QTEgR34DIomIA4Qu50h3X/Wpf/VN50pbYL5rbj+lLbym7OXgf6UtvKXs5eB0c6QdrixpcPtLRBG4G6363z1DZMp+xybDKYW+UN+HEcqVfk5Nm/Bjy3yH/zbs/elKj/H5hP4uUX+g/949lSq9UlyHMdVzpBEpP6NLa3XcCN4vV7HGP5F4GaziTHi+vK067Lyu7dwldE00DRNTJ2GCWsE+YVY0797+Luzb8CmwVvWNyC/EGv6dw//fPYH2DT4xPoD5BdifV+01hlS62VlmqbO31WeJDyo6h/xYojqdbcOq4yqgO/evXuiRWEgLBtC0BPw12efaFG4HONbHx4e9AT8w9knWhQux/jWx8dHZY/97XYbY+x8huR/RKHvsrJWo81mw17cj3hBTLAsC7OUtGZixvpmWreRsh+ET7PBtfWyAbjsdrhMydzBoewH4dNscG29bAAuux0uUzJ3cKh8qux/1DMHvqEasRemyTWZWHw1ybYpnslKjfC9b1m/gtwGyGQ2TFnwvZ9Yv4PcBshkNgxR9thf66hPKSFWaiRfIYRYKv/PaiGpFH/Wa4RMTXdw8I1UHZdKHl/T4Q4O/CBVx6WSx9d0uIMDP8hExz6DiRrhF5UeDocoM4mNpfv9Xt/HwB7AeqBGVW50D2KjNzU/Norb9vuzqj7fG8RGP2p+bhS37U9nT6eToY79C4ZqBELlxgwe1vDu7u62vZEHFV6mzrHmeb5tbwRD5RerrQ54297IhFaDwX/85/7j/uP+w3/uP+4/7j/uP/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zHf/zn/uP+w3/81/2H//iP//iP//jP/Yf/+I//uv/wH//xn/sP//Gf+w//8R//8R//8R//uf/wH/91/+E//uM//uM//nP/cf/hP/7r/sN/L/kQ8Zs3b0jhYrFgaHeQF2xQ6Tg6IpqgXkhQ5xwYxP1BXpxVpmmKpUHo1YYQKHUYhrkucN9VZI7jSDLdf+YsXHYXEGxACd4YES2Xy1muYCk+1lOO0ijzr6D7z2wVS0VXIVtk7uNQ/HLksiz9G/mD3D6PD2CsmRqNMeo7Zu5qyaXM5chujRxCbp6dwcMaKnsBt7hBg5VfXqtbxT/2BxsRkUvIDfSAtRvzPF/QfRxBJkQslTfyBrm1ts9b51JDNfIJ+dmg7j/8x3/uP/zHf/zHf/zHf+4//Md//Of+w3/8x3/uP/zHf+4//Md//Of+w3/8x3/uP/zHf+4//Md//Md//Md//Of+w3/85/7Df/zHf/zHf/zHf/z3wtAd")
size_override = Vector2(1800, 1800)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tcriy"]
size = Vector2(141.5, 159)

[node name="Slime" type="CharacterBody2D"]
script = ExtResource("1_k84ui")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 5.5)
shape = SubResource("RectangleShape2D_k84ui")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_j2cku")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = SubResource("PortableCompressedTexture2D_k84ui")
hframes = 6
vframes = 6
frame = 11
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": false,
"output_section": true,
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"convert_fps_field": 60.0,
"convert_ms_field": 16.0,
"convert_to_fps": false,
"embed_tex": true,
"i_mode": 0,
"keep_anim_length": false,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "AnimationPlayer",
"scale": "3.0",
"slice": "",
"source": "C:/Users/Ronald/Documents/sprites/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Aseprite file/Slime.aseprite",
"source_uid": 5881029252903167702
}
metadata/_aseprite_wizard_source_file_hash_ = "ea8f8d19ace12965af6dfe4b433b19cb"

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(52.5, 0.5)
shape = SubResource("RectangleShape2D_tcriy")
disabled = true
debug_color = Color(1, 0.0019865, 0.0767316, 0.42)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
